[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/game/ui/window/Window.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/game/ui/room/UIRoomSelection.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/section_title.tres" type="DynamicFont" id=3]

[node name="RoomSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.215686, 0.215686, 0.215686, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" parent="Control" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 500.0
rect_min_size = Vector2( 600, 400 )
title = "ui_window_room_selection"

[node name="Margin" type="MarginContainer" parent="Control/Window"]
anchor_top = 0.085
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.8147e-06
margin_bottom = -3.05176e-05
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Control/Window/Margin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 595.0
margin_bottom = 360.0

[node name="Details" type="VBoxContainer" parent="Control/Window/Margin/Container"]
margin_right = 590.0
margin_bottom = 35.0

[node name="Label" type="Label" parent="Control/Window/Margin/Container/Details"]
margin_right = 590.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 3 )
text = "ui_selection_details"

[node name="Description" type="Label" parent="Control/Window/Margin/Container/Details"]
margin_top = 22.0
margin_right = 590.0
margin_bottom = 35.0
text = "ui_room_selection_details"

[node name="Rooms" type="ScrollContainer" parent="Control/Window/Margin/Container"]
margin_top = 39.0
margin_right = 590.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Center" type="CenterContainer" parent="Control/Window/Margin/Container/Rooms"]
margin_right = 590.0
margin_bottom = 293.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Lines" type="VBoxContainer" parent="Control/Window/Margin/Container/Rooms/Center"]
margin_left = 295.0
margin_top = 146.0
margin_right = 295.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Actions" type="HBoxContainer" parent="Control/Window/Margin/Container"]
margin_top = 336.0
margin_right = 590.0
margin_bottom = 355.0
custom_constants/separation = 10

[node name="Confirm" type="CenterContainer" parent="Control/Window/Margin/Container/Actions"]
margin_right = 290.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="Confirm" type="Button" parent="Control/Window/Margin/Container/Actions/Confirm"]
margin_left = 109.0
margin_right = 180.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
disabled = true
text = "ui_confirm"

[node name="Cancel" type="CenterContainer" parent="Control/Window/Margin/Container/Actions"]
margin_left = 300.0
margin_right = 590.0
margin_bottom = 19.0
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="Control/Window/Margin/Container/Actions/Cancel"]
margin_left = 113.0
margin_right = 177.0
margin_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
text = "ui_cancel"
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="on_window_closed" from="Control/Window" to="." method="_on_Window_on_window_closed"]
[connection signal="pressed" from="Control/Window/Margin/Container/Actions/Confirm/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Control/Window/Margin/Container/Actions/Cancel/Cancel" to="." method="_on_Cancel_pressed"]
